# hexplane-nerfstudio

./: .gitignore  README.md  pyproject.toml
hexplane/: hexplane.py  hexplane_config.py  hexplane_encoding.py  hexplane_field.py
